<resources>
    <string name="app_name">Warehouse</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="nav_header_title">Warehouse</string>
    <string name="nav_header_desc">Menu</string>
    <string name="menu_settings">Ustawienia</string>

    <string name="menu_warehouse">Warehouse</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_orders">Order</string>
    <string name="menu_value_box">Value box</string>
    <string name="menu_next_inspection_date">Inpection dates</string>
    <string name="menu_market">Market</string>
    <string name="menu_markets_warehouse">Market\'s Warehouse</string>
    <string name="string_next_inspection_date">Date of next inspection</string>
    <string name="string_time_left_to_inspection">Time left till next inspection</string>
    <string name="string_equipment_name">Equipment name</string>
    <string name="empty_field">This field cannot be empty!</string>
    <string name="row_saved_true">Row successfully updated!</string>
    <string name="row_saved_false">Save error!</string>
    <string name="rows_updated">"Updated rows: "</string>
    <string name="add_position">Add</string>
    <string name="edit_position">Edit</string>
    <string name="string_equipment_serial_number">Equipment serial number</string>
    <string name="product_name">Product name</string>
    <string name="product_unit_price">Unit price</string>
    <string name="product_unit_of_account">Unit</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_origin">Origin</string>
    <string name="product_last_delivery_price">Unit price of last delivery</string>
    <string name="product_low_quantity_alert">Low quantity alert threshold</string>
    <string name="product_low_quantity_warning">Low quantity warning threshold</string>
    <string name="product_last_delivery_date">Last delivery date</string>
    <string name="string_modification_date_set">Setting today as delivery date!</string>
    <string name="product_option_undefined">Undefined</string>
    <string name="product_unit_mass">€/kg</string>
    <string name="product_unit_piece">€/piece</string>
    <string name="product_low_quantity_unit_percent">%</string>
    <string name="product_low_quantity_unit_as_accounting">As product</string>
    <string name="product_source_external">External</string>
    <string name="product_source_own">Own</string>
    <string name="wrong_value">Value of this field can not be smaller than</string>
    <string name="question_delete">Are you sure you want to delete this entry?</string>
    <string name="question_unsaved_changes">There are unsaved changes.\nDo you really want to cancel all changes?</string>
    <string name="question_btn_yes">Yes</string>
    <string name="question_btn_no">No</string>
    <string name="client_names">Names</string>
    <string name="client_surname">Surname</string>
    <string name="client_payment_method">Payment method</string>
    <string name="client_notes">Notes</string>
    <string name="client_address">Clients\' adress</string>
    <string name="client_phone">Clients\' phone number</string>
    <string name="order_choose_customer">Choose a customer</string>
    <string name="question_btn_confirm">Confirm</string>
    <string name="question_btn_cancel">Cancel</string>
</resources>