<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_warehouse">

    <fragment
        android:id="@+id/nav_warehouse"
        android:name="com.egm.magazyn.ui.home.HomeFragment"
        android:label="@string/menu_warehouse"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.egm.magazyn.ui.gallery.GalleryFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.egm.magazyn.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.egm.magazyn.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_value_box"
        android:name="com.egm.magazyn.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_value_box"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_next_inspection_date"
        android:name="com.egm.magazyn.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_next_inspection_date"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_market"
        android:name="com.egm.magazyn.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_market"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_markets_warehouse"
        android:name="com.egm.magazyn.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_markets_warehouse"
        tools:layout="@layout/fragment_slideshow" />


</navigation>