<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top">
        <EditText
            android:id="@+id/product_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:hint="@string/product_name"
            />
        <EditText
            android:id="@+id/product_input_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/product_quantity"
            android:textSize="@dimen/text_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/product_unit_price"/>
            <EditText
                android:id="@+id/product_input_unit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/product_unit_price"
                android:inputType="numberDecimal"/>
            <Spinner
                android:id="@+id/product_choose_unit_of_account"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/element_size"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/product_input_low_quantity_warning"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:inputType="numberDecimal"
                android:hint="@string/product_low_quantity_warning"/>
            <Spinner
                android:id="@+id/product_choose_warning_unit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/element_size"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/product_input_low_quantity_alert"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:inputType="numberDecimal"
                android:hint="@string/product_low_quantity_alert"/>
            <Spinner
                android:id="@+id/product_choose_alarm_unit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/element_size"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/product_origin"
            />
        <Spinner
            android:id="@+id/product_choose_origin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/element_size"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/product_input_last_delivery_unit_price"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:hint="@string/product_last_delivery_price"/>
        <TextView
            android:id="@+id/last_delivery_accounting_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size" />
        </LinearLayout>
        <TextView
            android:id="@+id/last_delivery_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textAlignment="center"
            android:text="@string/product_last_delivery_date"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/warehouse_edit_menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/outline_menu_black_48" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/warehouse_edit_save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/outline_save_black_48" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/warehouse_edit_close_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/outline_arrow_drop_down_circle_black_48" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/warehouse_edit_delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/outline_delete_black_48" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/warehouse_edit_cancel_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/outline_arrow_back_black_48" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>