<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editText_clients_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/client_names"
                    android:textSize="@dimen/text_size"
                    android:inputType="textPersonName"
                    />
                <EditText
                    android:id="@+id/editText_clients_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/client_surname"
                    android:textSize="@dimen/text_size"
                    android:inputType="textPersonName"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:src="@drawable/outline_contact_phone_black_48"/>
        <EditText
            android:id="@+id/editText_clients_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/client_phone"
            android:layout_weight="1"
            android:inputType="phone"
            android:textSize="@dimen/text_size"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:src="@drawable/outline_place_black_48"/>
            <EditText
                android:id="@+id/editText_clients_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/client_address"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:textSize="@dimen/text_size"
                />
        </LinearLayout>
        <Spinner
            android:id="@+id/spinner_clients_payment_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_clients_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="@dimen/text_size"
            android:hint="@string/client_notes"
            />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_clients_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/outline_save_black_48" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_clients_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/outline_delete_black_48" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_clients_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/outline_arrow_back_black_48" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>